--- a/www/prototypes/reference_nl_timestamp.page
+++ b/www/prototypes/reference_nl_timestamp.page
@@ -1,18 +1,20 @@
 ::xowiki::Page new \
 	-set name en:reference_nl_timestamp.page \
-	-title "Timestamp Definition Reference (NL)" \
+	-title "Element Type: Timestamp" \
 	-text {
 <p><u>Name:</u></p>
-<p>Define a timestamp for a video</p>
+<p>timestamp</p>
 
-<p><u>Synopsis - keywords used:</u></p>
-<p><b>Create</b> <i>OBJECT_NAME</i> <b>with id</b> <i>id_of_object</i></p>
-<p><b>Set</b> <i>ATTRIBUTE</i> <b>of</b> <i>id_of_object</i> <b>to</b> <i>attribute_content</i></p>
+<p><u>Synopsis</u></p>
+<p>Attributes definable with <b>Set</b></p>
+<p><i>ATTRIBUTE</i>: <b>id</b> <i>value</i>: any_characters_without_spaces
+<br/><i>ATTRIBUTE</i>: <b>title</b> <i>value</i>: string inside quotes
+<br/><i>ATTRIBUTE</i>: <b>time</b> <i>value</i>: time in seconds</p>
 
 <p><u>Description:</u></p>
-<p>Use the keywords <b>Create</b> and <b>Set</b> to define a timestamp (OBJECT_NAME). A timestamp needs to be created with an <b>id</b>. Each timestamp requires the following <i>ATTRIBUTES</i> to be set: title and time.</p>
+<p>A timestamp has an <b>id</b> in order to reference it. An <b>id</b> can consist of upper and lower case characters but no spaces are allowed. The <b>title</b> is used to display a clickable link. The <b>time</b> defines the start of the video at a certain time in seconds.</p>
 
-<p><u>Timestamp Example:</u></p>
-<p>Create timestamp with id intro<br>Set title of intro to "Introduction"<br>Set time of intro to 63</p>
+<p><u>Example:</u></p>
+<code class="example">Create timestamp with id t01<br>Set title of t01 to "Tutorial Timestamp"<br>Set time of t01 to 63</code>
 } \
 	-description {Timestamp}
