refine helper button listing
- add line break
- add css to accomodate height change

--- a/www/resources/storyboard.css
+++ b/www/resources/storyboard.css
@@ -84,6 +84,10 @@ div.sb-helpers {
   margin-left: 10px;
 }
 
+div.sb-help-text {
+  margin-bottom: -15px;
+}
+
 div.sb-editor {
   border: 1px solid grey;
   float: left;
