--- a/www/prototypes/reference_kv_textpage.page
+++ b/www/prototypes/reference_kv_textpage.page
@@ -9,14 +9,14 @@
 <p><b>textpage</b> <i>identifier</i> key <i>value</i></p>
 
 <p><u>Description:</u></p>
-<p>Creates a textpage based on key-value pairs. The provided <i>identifier</i> is used as an id for the element in order to reference it (e.g.: p1, myContent).</p>
+<p>Creates a textpage based on key-value pairs. The provided <i>identifier</i> is used in order to reference the element. The <b>title</b> and <b>body</b> of a textpage are regular text stated inside quotes.</p>
 
 <p>Valid keys are:</p>
 
-<p><b>textpage</b> <i>identifier</i> <b>title</b> title_of_paragraph<br>
-<b>textpage</b> <i>identifier</i> <b>body</b> paragraph_text</p>
+<p><b>textpage</b> <i>identifier</i> <b>title</b> string inside quotes<br>
+<b>textpage</b> <i>identifier</i> <b>body</b> string inside quotes</p>
 
 <p><u>Example:</u></p>
-<code class="example">textpage p1 title "Example Page Title" <br>textpage p1 body "This is some example text for a paragraph"</code>
+<code class="example">textpage tutorialTextPage title "An Example" <br>textpage tutorialTextPage body "Some text for an examplary paragraph"</code>
 } \
 	-description {Textpage}
