--- a/www/prototypes/reference_kv_timestamp.page
+++ b/www/prototypes/reference_kv_timestamp.page
@@ -3,21 +3,20 @@
 	-title "Timestamp Command Reference" \
 	-text {
 <p><u>Name:</u></p>
-<p>timestamp - Create a timestamp for a vide0</p>
+<p>timestamp - Create a timestamp for a video</p>
 
 <p><u>Synopsis:</u></p>
 <p><b>timestamp</b> <i>identifier</i> key <i>value</i></p>
 
 <p><u>Description:</u></p>
-<p>Creates a timestamp element based on key-value pairs. The provided <i>identifier</i> is used as an id for the element in order to reference it (e.g.: ts01, intro). A timestamp has a title and accepts time as input in seconds. One can directly assign the timestamp to a video.</p>
+<p>Creates a timestamp element based on key-value pairs. The provided <i>identifier</i> is used in order to reference the element. The <b>title</b> is used to display a clickable link. The <b>time</b> defines the start of the video at a certain time in seconds.</p>
 
 <p>Valid keys are:</p>
 
-<p><b>timestamp</b> <i>identifier</i> <b>title</b> title_of_timestamp<br>
-<b>timestamp</b> <i>identifier</i> <b>time</b> time_in_seconds<br>
-<b>timestamp</b> <i>identifier</i> <b>video</b> video_reference_id</p>
+<p><b>timestamp</b> <i>identifier</i> <b>title</b> string inside quotes<br>
+<b>timestamp</b> <i>identifier</i> <b>time</b> time in seconds</p>
 
 <p><u>Example:</u></p>
-<code class="example">timestamp ts01 title "Example Timestamp" <br>timestamp ts01 time 63<br>timestamp ts01 video myVideo</code>
+<code class="example">timestamp t01 title "Tutorial Timestamp" <br>timestamp t01 time 63</code>
 } \
 	-description {Timestamp}
