--- a/resources/prototypes/index.page
+++ b/resources/prototypes/index.page
@@ -1,43 +1,34 @@
 ::xowiki::Page new -title "Storyboard Editor" -text {
+<div class="xowfstoryboard-page-container">
+	<div class="xowfstoryboard-page-box">
+		<div class="xowfstoryboard-page-content">
 
-<p>
-This is the start page of xowfstoryboard.</p>
+		  <p>Weclome to the start page of xowfstoryboard.</p>
 
-<center>
-<p>KeyValue:</p>
-<p><a class="btn btn-primary btn-lg" href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value&p.treatment=1" role="button" style="color: white; text-decoration: none;">New Experiment (treatment 1)</a> <a class="btn btn-primary btn-lg" href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value&p.treatment=2" role="button" style="color: white; text-decoration: none;">New Experiment (treatment 2)</a> </p>
-<p>Natural-Language:</p>
-<p><a class="btn btn-primary btn-lg" href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language&p.treatment=1" role="button" style="color: white; text-decoration: none;">New Experiment (treatment 1)</a> <a class="btn btn-primary btn-lg" href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language&p.treatment=2" role="button" style="color: white; text-decoration: none;">New Experiment (treatment 2)</a> </p>
-<p>Editors:</p>
-<p>
-<a class="btn btn-primary btn-lg" href="storyboard.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value" role="button" style="color: white; text-decoration: none;">Key-Value</a> <a class="btn btn-primary btn-lg" href="storyboard.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language" role="button" style="color: white; text-decoration: none;">Natural-Language</a>
+		  <center>
+			<p>KeyValue:</p>
+			<p><a class="btn btn-primary btn-lg" href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value&p.treatment=1" role="button" style="color: white; text-decoration: none;">New Experiment (treatment 1)</a> <a class="btn btn-primary btn-lg" href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value&p.treatment=2" role="button" style="color: white; text-decoration: none;">New Experiment (treatment 2)</a> </p>
 
-</p>
-<p>Testing Links:</p>
-<p>Both: <a href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language&p.treatment=test1">Natural Language with Test Treatment 1</a> | <a href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value&p.treatment=test2">Key-Value with Test Treatment 2</a></p>
-<p>One: <a href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language&p.treatment=test1">Natural Language with Test Treatment 1</a></p>
-<p>Two: <a href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value&p.treatment=test1">Key-Value with Test Treatment 1</a></p>
-</center>
+			<p>Natural-Language:</p>
+			<p><a class="btn btn-primary btn-lg" href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language&p.treatment=1" role="button" style="color: white; text-decoration: none;">New Experiment (treatment 1)</a> <a class="btn btn-primary btn-lg" href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language&p.treatment=2" role="button" style="color: white; text-decoration: none;">New Experiment (treatment 2)</a> </p>
 
-<hr>
+			<p>Editors:</p>
+			<p><a class="btn btn-primary btn-lg" href="storyboard.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value" role="button" style="color: white; text-decoration: none;">Key-Value</a> <a class="btn btn-primary btn-lg" href="storyboard.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language" role="button" style="color: white; text-decoration: none;">Natural-Language</a></p>
 
-<p>
-Storyboards defined in this package:
-</p>
+			<p>Testing Links:</p>
 
- {{form-usages -field_names _name -form en:experiment.wf -parent_id * -csv false -with_form_link false}}
+			<p>Both: <a href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language&p.treatment=test1">Natural Language with Test Treatment 1</a> | <a href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value&p.treatment=test2">Key-Value with Test Treatment 2</a></p>
+			<p>One: <a href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language&p.treatment=test1">Natural Language with Test Treatment 1</a></p>
+			<p>Two: <a href="experiment.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value&p.treatment=test1">Key-Value with Test Treatment 1</a></p>
+		  </center>
 
-<hr>
+		  <hr>
 
-<p>Activity Overview:</p>
+		  <h5> Experiments:</h5>
 
->>left-col<<
-{{recent -max_entries 25}}
->><<
->>right-col<<
-{{last-visited -title "Last Visited" -max_entries 10 }}
-<br>
-{{most-popular -title "Most Popular" -max_entries 10 }}
->><<
+		  {{form-usages -field_names _name -form en:experiment.wf -parent_id * -csv false -with_form_link false}}
 
+		</div>
+	</div>
+</div>
 }
