lighten lightgray for code block
from lightgray to e6e6e6

--- a/www/resources/experiment.css
+++ b/www/resources/experiment.css
@@ -123,7 +123,7 @@ button[name="__action_finish"].btn-default:hover {
 }
 
 code.example {
-  background-color: lightgray;
+  background-color: #e6e6e6;
   border: 1px solid #999;
   display: block;
   padding: 2px 4px;
